--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                 </a>
             </div>
         </div>
-    </header>
-    <main>
         <div class="intro">
             <h1 class="text">
                 Bienvenido a CoolFit, el lugar de tu ropa Cool favorita
             </h1>
         </div>
+    </header>
+    <main>
         <div class="ultimos-productos">
             <div class="section-header">
                 <h3>Ultimos productos</h3>
@@ -167,6 +167,7 @@
             </nav>
         </div>
     </footer>
+    <script src="scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
