agrego dir partials, dentro del mismo components y agrego _header.scss y lo importo en main.scss; comienzo a dar estilo a card-container

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                             </div>
                         </a>
                     </li>
-                    <li class="option"><a href="#">OFERTAS!</a></li>
-                    <li class="option"><a href="#">Tienda</a></li>
-                    <li class="option"><a href="#">Preguntas Frecuentes</a></li>
-                    <li class="option"><a href="#">Contacto</a></li>
+                    <li class="option"><a id="nav-header-link" href="#">OFERTAS!</a></li>
+                    <li class="option"><a id="nav-header-link" href="#">Tienda</a></li>
+                    <li class="option"><a id="nav-header-link" href="#">Preguntas Frecuentes</a></li>
+                    <li class="option"><a id="nav-header-link" href="#">Contacto</a></li>
                 </ul>
             </nav>
             <div class="carrito">
