agrego mas imagenes, creo dir base en partials con _reset para poner margin y padding 0 a todos los elementos, agrego partial _index en components y lo importo en main.scss

--- a/index.html
+++ b/index.html
@@ -50,11 +50,18 @@
             <div class="card-container">
                 <div class="card">
                     <div class="card-img">
-                        <img src="assest/images/remera1.jpg" alt="">
+                        <img src="assest/images/buzo2.jpeg" alt="">
                     </div>
                     <div class="info-producto">
-                        <h4>Nombre del Producto</h4>
-                        <p>$15000</p>
+                        <div class="nombre-producto">
+                            <h4>Buzo Yend🧉</h4>
+                        </div>
+                        <div class="precio-producto">
+                            <p>$15000</p>
+                        </div>
+                        <div class="link-producto">
+                            <a href="#">Detalles</a>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
@@ -62,26 +69,47 @@
                         <img src="assest/images/remera2.jpeg" alt="">
                     </div>
                     <div class="info-producto">
-                        <h4>Nombre del Producto</h4>
-                        <p>$15000</p>
+                        <div class="nombre-producto">
+                            <h4>Buzo Yend🧉</h4>
+                        </div>
+                        <div class="precio-producto">
+                            <p>$15000</p>
+                        </div>
+                        <div class="link-producto">
+                            <a href="#">Detalles</a>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="assest/images/remera3.jpg" alt="">
+                        <img src="assest/images/piluso1.jpg" alt="">
                     </div>
                     <div class="info-producto">
-                        <h4>Nombre del Producto</h4>
-                        <p>$15000</p>
+                        <div class="nombre-producto">
+                            <h4>Buzo Yend🧉</h4>
+                        </div>
+                        <div class="precio-producto">
+                            <p>$15000</p>
+                        </div>
+                        <div class="link-producto">
+                            <a href="#">Detalles</a>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="assest/images/remera4.jpg" alt="">
+                        <img src="assest/images/gorra1.jpg" alt="">
                     </div>
                     <div class="info-producto">
-                        <h4>Nombre del Producto</h4>
-                        <p>$15000</p>
+                        <div class="nombre-producto">
+                            <h4>Buzo Yend🧉</h4>
+                        </div>
+                        <div class="precio-producto">
+                            <p>$15000</p>
+                        </div>
+                        <div class="link-producto">
+                            <a href="#">Detalles</a>
+                        </div>
                     </div>
                 </div>
             </div>
