agrego mas imagenes, le doy estilo a la seccion de categorias en index con display grid

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             </nav>
             <div class="carrito">
                 <a href="#" class="boton-carrito">
-                    <span class="carrito-logo">
+                    <div class="carrito-logo">
                         <i class="bi bi-cart2"></i>
-                    </span>
-                    <span class="count" id="count">0</span>
+                    </div>
+                    <div class="count" id="count">0</div>
                 </a>
             </div>
         </div>
@@ -120,10 +120,15 @@
                     <h3>Nuestros productos</h3>
                     <p>Estos son los productos que podes checkear</p>
                 </div>
-                <div class="productos-container">
-                    <span class="prod1">Buzos</span>
-                    <span class="prod2">Remeras</span>
-                    <span class="prod3">Gorros</span>
+                <div class="cat1">
+                    <span class="cat-info"><b>Buzos</b></span>
+                </div>
+                <div class="cat2">
+                    <span class="cat-info"><b>Remeras</b></span>
+                </div>
+                <div class="cat3">
+                    <span class="cat-info"><b>Gorros</b></span>
+                </div>
                 </div>
             </div>
         </div>
