agrego nuevo partial en component correspondiente al footer, primera version de index finalizada

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </header>
     <main>
-        <div class="ultimos-productos">
+        <div class="productos">
             <div class="section-header">
                 <h3>Ultimos productos</h3>
                 <p>Descubrí las nuevas prendas!</p>
@@ -120,19 +120,21 @@
                     <h3>Nuestros productos</h3>
                     <p>Estos son los productos que podes checkear</p>
                 </div>
-                <div class="cat1">
+                <a href="#" class="cat1">
                     <span class="cat-info"><b>Buzos</b></span>
-                </div>
-                <div class="cat2">
+                    <p class="info-extra">Y tambien camperas 👐</p>
+                </a>
+                <a href="#" class="cat2">
                     <span class="cat-info"><b>Remeras</b></span>
-                </div>
-                <div class="cat3">
+                    <p class="info-extra">De todos los estilos 😎</p>
+                </a>
+                <a href="#" class="cat3">
                     <span class="cat-info"><b>Gorros</b></span>
-                </div>
-                </div>
+                    <p class="info-extra">Ademas hay pilusos 🔥</p>
+                </a>
             </div>
         </div>
-        <div class="productos-destacados">
+        <div class="productos">
             <div class="section-header">
                 <h3>Destacados</h3>
                 <p>Productos mas populares ⭐</p>
