agrego mixins y variables para acomodar el codigo en scss, agrego un icono para activar dark mode en el header y lo acomodo en una nav separada de la nav-bar junto con el logo de carrito

--- a/index.html
+++ b/index.html
@@ -26,14 +26,27 @@
                     <li class="option"><a id="nav-header-link" href="#">Contacto</a></li>
                 </ul>
             </nav>
-            <div class="carrito">
-                <a href="#" class="boton-carrito">
-                    <div class="carrito-logo">
-                        <i class="bi bi-cart2"></i>
-                    </div>
-                    <div class="count" id="count">0</div>
-                </a>
-            </div>
+            <nav class="nav-tools">
+                <ul class="tools-list">
+                    <li class="tool">
+                        <div class="carrito">
+                            <a href="#" class="boton-carrito" id="shop-icon">
+                                <div class="carrito-logo" >
+                                    <i class="bi bi-cart2"></i>
+                                </div>
+                                <div class="count" id="count">0</div>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="tool">
+                        <div class="boton-dark-mode" >
+                            <button class="dark-mode-logo" >
+                                <i class="bi bi-moon-stars-fill" id="dark-mode-logo"></i>
+                            </button>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
         </div>
         <div class="intro">
             <h1 class="text">
