--- a/index.html
+++ b/index.html
@@ -50,147 +50,170 @@
         </div>
         <div class="intro">
             <h1 class="text">
-                Bienvenido a CoolFit, el lugar de tu ropa Cool favorita
+                CoolFit: donde el estilo se encuentra con la comodidad
             </h1>
         </div>
     </header>
     <main>
-        <div class="productos">
-            <div class="section-header">
-                <h3>Ultimos productos</h3>
-                <p>Descubrí las nuevas prendas!</p>
+        <div class="section-info">
+            <h3>Ultimos productos</h3>
+            <p>Descubrí las nuevas prendas!</p>
+        </div>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-img">
+                    <img src="assest/images/buzo2.jpeg" alt="">
+                </div>
+                <div class="info-producto">
+                    <div class="nombre-producto">
+                        <h4>Buzo Yend🧉</h4>
+                    </div>
+                    <div class="precio-producto">
+                        <p>$15000</p>
+                    </div>
+                    <div class="link-producto">
+                        <a href="#">Detalles</a>
+                    </div>
+                </div>
             </div>
-            <div class="card-container">
-                <div class="card">
-                    <div class="card-img">
-                        <img src="assest/images/buzo2.jpeg" alt="">
+            <div class="card">
+                <div class="card-img">
+                    <img src="assest/images/remera2.jpeg" alt="">
+                </div>
+                <div class="info-producto">
+                    <div class="nombre-producto">
+                        <h4>Buzo Yend🧉</h4>
                     </div>
-                    <div class="info-producto">
-                        <div class="nombre-producto">
-                            <h4>Buzo Yend🧉</h4>
-                        </div>
-                        <div class="precio-producto">
-                            <p>$15000</p>
-                        </div>
-                        <div class="link-producto">
-                            <a href="#">Detalles</a>
-                        </div>
+                    <div class="precio-producto">
+                        <p>$15000</p>
+                    </div>
+                    <div class="link-producto">
+                        <a href="#">Detalles</a>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="assest/images/remera2.jpeg" alt="">
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="assest/images/piluso1.jpg" alt="">
+                </div>
+                <div class="info-producto">
+                    <div class="nombre-producto">
+                        <h4>Buzo Yend🧉</h4>
                     </div>
-                    <div class="info-producto">
-                        <div class="nombre-producto">
-                            <h4>Buzo Yend🧉</h4>
-                        </div>
-                        <div class="precio-producto">
-                            <p>$15000</p>
-                        </div>
-                        <div class="link-producto">
-                            <a href="#">Detalles</a>
-                        </div>
+                    <div class="precio-producto">
+                        <p>$15000</p>
+                    </div>
+                    <div class="link-producto">
+                        <a href="#">Detalles</a>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="assest/images/piluso1.jpg" alt="">
-                    </div>
-                    <div class="info-producto">
-                        <div class="nombre-producto">
-                            <h4>Buzo Yend🧉</h4>
-                        </div>
-                        <div class="precio-producto">
-                            <p>$15000</p>
-                        </div>
-                        <div class="link-producto">
-                            <a href="#">Detalles</a>
-                        </div>
-                    </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="assest/images/gorra1.jpg" alt="">
                 </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="assest/images/gorra1.jpg" alt="">
+                <div class="info-producto">
+                    <div class="nombre-producto">
+                        <h4>Buzo Yend🧉</h4>
                     </div>
-                    <div class="info-producto">
-                        <div class="nombre-producto">
-                            <h4>Buzo Yend🧉</h4>
-                        </div>
-                        <div class="precio-producto">
-                            <p>$15000</p>
-                        </div>
-                        <div class="link-producto">
-                            <a href="#">Detalles</a>
-                        </div>
+                    <div class="precio-producto">
+                        <p>$15000</p>
+                    </div>
+                    <div class="link-producto">
+                        <a href="#">Detalles</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="categorias">
-            <div class="cat-container">
-                <div class="section-header">
-                    <h3>Nuestros productos</h3>
-                    <p>Estos son los productos que podes checkear</p>
+        <div class="section-info">
+            <h3>Destacados</h3>
+            <p>Productos mas populares ⭐</p>
+        </div>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-img">
+                    <img src="assest/images/remera1.jpg" alt="">
                 </div>
-                <a href="#" class="cat1">
-                    <span class="cat-info"><b>Buzos</b></span>
-                    <p class="info-extra">Y tambien camperas 👐</p>
-                </a>
-                <a href="#" class="cat2">
-                    <span class="cat-info"><b>Remeras</b></span>
-                    <p class="info-extra">De todos los estilos 😎</p>
-                </a>
-                <a href="#" class="cat3">
-                    <span class="cat-info"><b>Gorros</b></span>
-                    <p class="info-extra">Ademas hay pilusos 🔥</p>
-                </a>
+                <div class="info-producto">
+                    <div class="nombre-producto">
+                        <h4>Nombre del Producto</h4>
+                    </div>
+                    <div class="precio-producto">
+                        <p>$15000</p>
+                    </div>
+                    <div class="link-producto">
+                        <a href="#">Detalles</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="assest/images/remera2.jpeg" alt="">
+                </div>
+                <div class="info-producto">
+                    <div class="nombre-producto">
+                        <h4>Nombre del Producto</h4>
+                    </div>
+                    <div class="precio-producto">
+                        <p>$15000</p>
+                    </div>
+                    <div class="link-producto">
+                        <a href="#">Detalles</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="assest/images/remera3.jpg" alt="">
+                </div>
+                <div class="info-producto">
+                    <div class="nombre-producto">
+                        <h4>Nombre del Producto</h4>
+                    </div>
+                    <div class="precio-producto">
+                        <p>$15000</p>
+                    </div>
+                    <div class="link-producto">
+                        <a href="#">Detalles</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="assest/images/remera4.jpg" alt="">
+                </div>
+                <div class="info-producto">
+                    <div class="nombre-producto">
+                        <h4>Nombre del Producto</h4>
+                    </div>
+                    <div class="precio-producto">
+                        <p>$15000</p>
+                    </div>
+                    <div class="link-producto">
+                        <a href="#">Detalles</a>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="productos">
-            <div class="section-header">
-                <h3>Destacados</h3>
-                <p>Productos mas populares ⭐</p>
-            </div>
-            <div class="card-container">
-                <div class="card">
-                    <div class="card-img">
-                        <img src="assest/images/remera1.jpg" alt="">
-                    </div>
-                    <div class="info-producto">
-                        <h4>Nombre del Producto</h4>
-                        <p>$15000</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="assest/images/remera2.jpeg" alt="">
-                    </div>
-                    <div class="info-producto">
-                        <h4>Nombre del Producto</h4>
-                        <p>$15000</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="assest/images/remera3.jpg" alt="">
-                    </div>
-                    <div class="info-producto">
-                        <h4>Nombre del Producto</h4>
-                        <p>$15000</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="assest/images/remera4.jpg" alt="">
-                    </div>
-                    <div class="info-producto">
-                        <h4>Nombre del Producto</h4>
-                        <p>$15000</p>
-                    </div>
-                </div>
-            </div>
+        <div class="section-info">
+            <h3>Nuestros productos</h3>
+            <p>Estos son los productos que podes checkear</p>
         </div>
+        <div class="cat-container">
+            <a href="#" class="cat1">
+                <span class="cat-info"><b>Buzos</b></span>
+                <p class="info-extra">Y tambien camperas 👐</p>
+            </a>
+            <a href="#" class="cat2">
+                <span class="cat-info"><b>Remeras</b></span>
+                <p class="info-extra">De todos los estilos 😎</p>
+            </a>
+            <a href="#" class="cat3">
+                <span class="cat-info"><b>Gorros</b></span>
+                <p class="info-extra">Ademas hay pilusos 🔥</p>
+            </a>
+        </div>
+        
     </main>
     <footer>
         <div class="social-media">
