agrego menu desplegable para vista mobile creando un evento en el script, con sus respectivos estilos en sass

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <header class="header-wrapper">
         <div class="menu">
-            <nav class="nav-bar">
+            <div class="logo">
+                <a href="index.html"></a>
+                <img src="assest/images/logo1.jpeg" alt="logo">
+            </div>
+            <nav class="nav-bar ">
+                <button class="close-menu">
+                    <i class="bi bi-x-circle-fill close-nav"></i>
+                </button>
                 <ul class="option-menu">
-                    <li class="option">
-                        <a href="index.html">
-                            <div class="logo">
-                                <img src="assest/images/logo1.jpeg" alt="logo">
-                            </div>
-                        </a>
-                    </li>
                     <li class="option"><a id="nav-header-link" href="#">OFERTAS!</a></li>
                     <li class="option"><a id="nav-header-link" href="#">Tienda</a></li>
                     <li class="option"><a id="nav-header-link" href="#">Preguntas Frecuentes</a></li>
@@ -47,6 +47,9 @@
                     </li>
                 </ul>
             </nav>
+            <div class="open-menu">
+                <i class="bi bi-list" id="list-menu"></i>
+            </div>
         </div>
         <div class="intro">
             <h1 class="text">
