agrego dark mode basico en seccion main de la pagina

--- a/index.html
+++ b/index.html
@@ -57,12 +57,15 @@
             </h1>
         </div>
     </header>
+
+
     <main>
-        <div class="section-info">
+        <div class="body-wrapper dark-mode">
+        <div class="section-info ">
             <h3>Ultimos productos</h3>
             <p>Descubrí las nuevas prendas!</p>
         </div>
-        <div class="card-container">
+        <div class="card-container ">
             <div class="card">
                 <div class="card-img">
                     <img src="assest/images/buzo2.jpeg" alt="">
@@ -217,7 +220,10 @@
             </a>
         </div>
         
+    </div>
     </main>
+
+
     <footer>
         <div class="social-media">
             <nav class="links">
