agrego nueva componente para un boton de ver mas debajo de categorias en index y le doy estilos con bootsttrap; cambio estilos del footer y color del dark mode y del header

--- a/index.html
+++ b/index.html
@@ -61,166 +61,168 @@
 
     <main>
         <div class="body-wrapper dark-mode">
-        <div class="section-info ">
-            <h3>Ultimos productos</h3>
-            <p>Descubrí las nuevas prendas!</p>
+            <div class="section-info ">
+                <h3>Ultimos productos</h3>
+                <p>Descubrí las nuevas prendas!</p>
+            </div>
+            <div class="card-container ">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="assest/images/buzo2.jpeg" alt="">
+                    </div>
+                    <div class="info-producto">
+                        <div class="nombre-producto">
+                            <h4>Buzo Yend🧉</h4>
+                        </div>
+                        <div class="precio-producto">
+                            <p>$15000</p>
+                        </div>
+                        <div class="link-producto">
+                            <a href="#">Detalles</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="assest/images/remera2.jpeg" alt="">
+                    </div>
+                    <div class="info-producto">
+                        <div class="nombre-producto">
+                            <h4>Buzo Yend🧉</h4>
+                        </div>
+                        <div class="precio-producto">
+                            <p>$15000</p>
+                        </div>
+                        <div class="link-producto">
+                            <a href="#">Detalles</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="assest/images/piluso1.jpg" alt="">
+                    </div>
+                    <div class="info-producto">
+                        <div class="nombre-producto">
+                            <h4>Buzo Yend🧉</h4>
+                        </div>
+                        <div class="precio-producto">
+                            <p>$15000</p>
+                        </div>
+                        <div class="link-producto">
+                            <a href="#">Detalles</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="assest/images/gorra1.jpg" alt="">
+                    </div>
+                    <div class="info-producto">
+                        <div class="nombre-producto">
+                            <h4>Buzo Yend🧉</h4>
+                        </div>
+                        <div class="precio-producto">
+                            <p>$15000</p>
+                        </div>
+                        <div class="link-producto">
+                            <a href="#">Detalles</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-info">
+                <h3>Destacados</h3>
+                <p>Productos mas populares ⭐</p>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="assest/images/remera1.jpg" alt="">
+                    </div>
+                    <div class="info-producto">
+                        <div class="nombre-producto">
+                            <h4>Nombre del Producto</h4>
+                        </div>
+                        <div class="precio-producto">
+                            <p>$15000</p>
+                        </div>
+                        <div class="link-producto">
+                            <a href="#">Detalles</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="assest/images/remera2.jpeg" alt="">
+                    </div>
+                    <div class="info-producto">
+                        <div class="nombre-producto">
+                            <h4>Nombre del Producto</h4>
+                        </div>
+                        <div class="precio-producto">
+                            <p>$15000</p>
+                        </div>
+                        <div class="link-producto">
+                            <a href="#">Detalles</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="assest/images/remera3.jpg" alt="">
+                    </div>
+                    <div class="info-producto">
+                        <div class="nombre-producto">
+                            <h4>Nombre del Producto</h4>
+                        </div>
+                        <div class="precio-producto">
+                            <p>$15000</p>
+                        </div>
+                        <div class="link-producto">
+                            <a href="#">Detalles</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="assest/images/remera4.jpg" alt="">
+                    </div>
+                    <div class="info-producto">
+                        <div class="nombre-producto">
+                            <h4>Nombre del Producto</h4>
+                        </div>
+                        <div class="precio-producto">
+                            <p>$15000</p>
+                        </div>
+                        <div class="link-producto">
+                            <a href="#">Detalles</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-info">
+                <h3>Nuestros productos</h3>
+                <p>Estos son los productos que podes checkear</p>
+            </div>
+            <div class="cat-container">
+                <a href="#" class="cat1">
+                    <span class="cat-info"><b>Buzos</b></span>
+                    <p class="info-extra">Y tambien camperas 👐</p>
+                </a>
+                <a href="#" class="cat2">
+                    <span class="cat-info"><b>Remeras</b></span>
+                    <p class="info-extra">De todos los estilos 😎</p>
+                </a>
+                <a href="#" class="cat3">
+                    <span class="cat-info"><b>Gorros</b></span>
+                    <p class="info-extra">Ademas hay pilusos 🔥</p>
+                </a>
+            </div>
+            <div class="link-more-products ">
+                <a href="#" class="btn btn-primary">VER MÁS</a>
+            </div>
         </div>
-        <div class="card-container ">
-            <div class="card">
-                <div class="card-img">
-                    <img src="assest/images/buzo2.jpeg" alt="">
-                </div>
-                <div class="info-producto">
-                    <div class="nombre-producto">
-                        <h4>Buzo Yend🧉</h4>
-                    </div>
-                    <div class="precio-producto">
-                        <p>$15000</p>
-                    </div>
-                    <div class="link-producto">
-                        <a href="#">Detalles</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-img">
-                    <img src="assest/images/remera2.jpeg" alt="">
-                </div>
-                <div class="info-producto">
-                    <div class="nombre-producto">
-                        <h4>Buzo Yend🧉</h4>
-                    </div>
-                    <div class="precio-producto">
-                        <p>$15000</p>
-                    </div>
-                    <div class="link-producto">
-                        <a href="#">Detalles</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-img">
-                    <img src="assest/images/piluso1.jpg" alt="">
-                </div>
-                <div class="info-producto">
-                    <div class="nombre-producto">
-                        <h4>Buzo Yend🧉</h4>
-                    </div>
-                    <div class="precio-producto">
-                        <p>$15000</p>
-                    </div>
-                    <div class="link-producto">
-                        <a href="#">Detalles</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-img">
-                    <img src="assest/images/gorra1.jpg" alt="">
-                </div>
-                <div class="info-producto">
-                    <div class="nombre-producto">
-                        <h4>Buzo Yend🧉</h4>
-                    </div>
-                    <div class="precio-producto">
-                        <p>$15000</p>
-                    </div>
-                    <div class="link-producto">
-                        <a href="#">Detalles</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section-info">
-            <h3>Destacados</h3>
-            <p>Productos mas populares ⭐</p>
-        </div>
-        <div class="card-container">
-            <div class="card">
-                <div class="card-img">
-                    <img src="assest/images/remera1.jpg" alt="">
-                </div>
-                <div class="info-producto">
-                    <div class="nombre-producto">
-                        <h4>Nombre del Producto</h4>
-                    </div>
-                    <div class="precio-producto">
-                        <p>$15000</p>
-                    </div>
-                    <div class="link-producto">
-                        <a href="#">Detalles</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-img">
-                    <img src="assest/images/remera2.jpeg" alt="">
-                </div>
-                <div class="info-producto">
-                    <div class="nombre-producto">
-                        <h4>Nombre del Producto</h4>
-                    </div>
-                    <div class="precio-producto">
-                        <p>$15000</p>
-                    </div>
-                    <div class="link-producto">
-                        <a href="#">Detalles</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-img">
-                    <img src="assest/images/remera3.jpg" alt="">
-                </div>
-                <div class="info-producto">
-                    <div class="nombre-producto">
-                        <h4>Nombre del Producto</h4>
-                    </div>
-                    <div class="precio-producto">
-                        <p>$15000</p>
-                    </div>
-                    <div class="link-producto">
-                        <a href="#">Detalles</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-img">
-                    <img src="assest/images/remera4.jpg" alt="">
-                </div>
-                <div class="info-producto">
-                    <div class="nombre-producto">
-                        <h4>Nombre del Producto</h4>
-                    </div>
-                    <div class="precio-producto">
-                        <p>$15000</p>
-                    </div>
-                    <div class="link-producto">
-                        <a href="#">Detalles</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="section-info">
-            <h3>Nuestros productos</h3>
-            <p>Estos son los productos que podes checkear</p>
-        </div>
-        <div class="cat-container">
-            <a href="#" class="cat1">
-                <span class="cat-info"><b>Buzos</b></span>
-                <p class="info-extra">Y tambien camperas 👐</p>
-            </a>
-            <a href="#" class="cat2">
-                <span class="cat-info"><b>Remeras</b></span>
-                <p class="info-extra">De todos los estilos 😎</p>
-            </a>
-            <a href="#" class="cat3">
-                <span class="cat-info"><b>Gorros</b></span>
-                <p class="info-extra">Ademas hay pilusos 🔥</p>
-            </a>
-        </div>
-        
-    </div>
     </main>
 
 
