cambio estilos en index y en el header

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <header class="header-wrapper">
         <div class="menu">
             <div class="logo">
-                <a href="index.html"></a>
-                <img src="assest/images/logo1.jpeg" alt="logo">
+                <a href="index.html" class="logo-button">
+                    <img src="assest/images/logo1.jpeg" alt="logo" class="logo-img">
+                </a>
             </div>
             <nav class="nav-bar ">
                 <button class="close-menu">
@@ -72,7 +73,7 @@
                     </div>
                     <div class="info-producto">
                         <div class="nombre-producto">
-                            <h4>Buzo Yend🧉</h4>
+                            <h4>Nombre del Producto</h4>
                         </div>
                         <div class="precio-producto">
                             <p>$15000</p>
@@ -88,7 +89,7 @@
                     </div>
                     <div class="info-producto">
                         <div class="nombre-producto">
-                            <h4>Buzo Yend🧉</h4>
+                            <h4>Nombre del Producto</h4>
                         </div>
                         <div class="precio-producto">
                             <p>$15000</p>
@@ -104,7 +105,7 @@
                     </div>
                     <div class="info-producto">
                         <div class="nombre-producto">
-                            <h4>Buzo Yend🧉</h4>
+                            <h4>Nombre del Producto</h4>
                         </div>
                         <div class="precio-producto">
                             <p>$15000</p>
@@ -120,7 +121,7 @@
                     </div>
                     <div class="info-producto">
                         <div class="nombre-producto">
-                            <h4>Buzo Yend🧉</h4>
+                            <h4>Nombre del Producto</h4>
                         </div>
                         <div class="precio-producto">
                             <p>$15000</p>
