agrego nuevos componentes en scss y nuevo modulo de js para manejar la posicion de la nav del header en otras paginas ademas del index; doy estructura basica a un producto que se aplicara al resto de los demas productos

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <p>$15000</p>
                         </div>
                         <div class="link-producto">
-                            <a href="#">Detalles</a>
+                            <a href="products/buzo1.html">Detalles</a>
                         </div>
                     </div>
                 </div>
