agrego estilos para vista mobile del card container usado en index y en los archivos de products; le doy estilos a vista desktop, tablet y mobile a los products

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <p>$15000</p>
                         </div>
                         <div class="link-producto">
-                            <a href="#">Detalles</a>
+                            <a href="products/remera1.html">Detalles</a>
                         </div>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                             <p>$15000</p>
                         </div>
                         <div class="link-producto">
-                            <a href="#">Detalles</a>
+                            <a href="products/piluso1.html">Detalles</a>
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                             <p>$15000</p>
                         </div>
                         <div class="link-producto">
-                            <a href="#">Detalles</a>
+                            <a href="products/gorro1.html">Detalles</a>
                         </div>
                     </div>
                 </div>
