--- a/products/buzo1.html
+++ b/products/buzo1.html
@@ -76,6 +76,10 @@
                             <option value="4">XL</option>
                         </select>
                     </div>
+                    <div class="add-to-cart">
+                        <button type="button" class="btn btn-primary btn-lg">Añadir al carrito</button>
+                        <button type="button" class="btn btn-primary btn-lg">Comprar ahora</button>
+                    </div>
                 </section>
                 <section class="other-products">
                     <div class="section-info">
@@ -95,7 +99,7 @@
                                     <p>$15000</p>
                                 </div>
                                 <div class="link-producto">
-                                    <a href="products/buzo1.html">Detalles</a>
+                                    <a href="#">Detalles</a>
                                 </div>
                             </div>
                         </div>
@@ -111,7 +115,7 @@
                                     <p>$15000</p>
                                 </div>
                                 <div class="link-producto">
-                                    <a href="#">Detalles</a>
+                                    <a href="remera1.html">Detalles</a>
                                 </div>
                             </div>
                         </div>
@@ -127,7 +131,7 @@
                                     <p>$15000</p>
                                 </div>
                                 <div class="link-producto">
-                                    <a href="#">Detalles</a>
+                                    <a href="piluso1.html">Detalles</a>
                                 </div>
                             </div>
                         </div>
@@ -143,7 +147,7 @@
                                     <p>$15000</p>
                                 </div>
                                 <div class="link-producto">
-                                    <a href="#">Detalles</a>
+                                    <a href="gorro1.html">Detalles</a>
                                 </div>
                             </div>
                         </div>
